[gd_scene load_steps=2 format=3 uid="uid://biwtat2m8jaqc"]

[ext_resource type="Script" path="res://Scenes/Investigation/SCR_investigation.gd" id="1_qf8ob"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScnIntroCutscene" type="Node2D" parent="."]
script = ExtResource("1_qf8ob")

[node name="ButtonsLayer" type="CanvasLayer" parent="."]

[node name="LocationsContainer" type="GridContainer" parent="ButtonsLayer"]
show_behind_parent = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.5
offset_top = -83.5
offset_right = 183.5
offset_bottom = 83.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 2

[node name="The Dungeon" type="Button" parent="ButtonsLayer/LocationsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "\"The Dungeon\""

[node name="Kitchen" type="Button" parent="ButtonsLayer/LocationsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Kitchen"

[node name="Bedroom" type="Button" parent="ButtonsLayer/LocationsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Bedroom"

[node name="Garage" type="Button" parent="ButtonsLayer/LocationsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Garage"

[node name="Garden" type="Button" parent="ButtonsLayer/LocationsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Garden"

[connection signal="pressed" from="ButtonsLayer/LocationsContainer/The Dungeon" to="ScnIntroCutscene" method="_on_the_dungeon_pressed"]
[connection signal="pressed" from="ButtonsLayer/LocationsContainer/Kitchen" to="ScnIntroCutscene" method="_on_kitchen_pressed"]
[connection signal="pressed" from="ButtonsLayer/LocationsContainer/Bedroom" to="ScnIntroCutscene" method="_on_bedroom_pressed"]
[connection signal="pressed" from="ButtonsLayer/LocationsContainer/Garage" to="ScnIntroCutscene" method="_on_garage_pressed"]
[connection signal="pressed" from="ButtonsLayer/LocationsContainer/Garden" to="ScnIntroCutscene" method="_on_garden_pressed"]
